<resources>
    <string name="app_name">UseSdkExample</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="server_id">Sever Id</string>
    <string name="sign_in">Sign In</string>
    <string name="remember_me">Remember me</string>
    <string name="load_credentials">Load last credentials</string>
    <string name="one">One</string>
    <string name="two">Two</string>
    <string name="three">Three</string>
    <string name="four">Four</string>
    <string name="groups">Groups</string>
    <string name="ptt_text">PTT</string>
    <string name="call_text">call</string>
    <string name="end_call_text">End Call</string>
    <string name="sos_item_title">SOS</string>
    <string name="end_call_item_title">End Call</string>
    <string name="no_group_selected">No group selected</string>
    <string name="select">Select</string>
    <string name="added_group_name">New Group Name</string>
    <string name="done_button">Done</string>
    <string name="remove">Remove</string>
    <string name="add">Add</string>
    <string name="add_group">Add Group</string>
    <string name="remove_group">Remove Group</string>
    <string name="show_group_members">Show Group Members</string>
    <string name="msg">MSG</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="clear_all">Clear All</string>
    <string name="clear_all_question">Clear All?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>


</resources>
